--- a/styles/index.css
+++ b/styles/index.css
@@ -1,226 +1,252 @@
-@import url('https://fonts.googleapis.com/css?family=Abel');
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes') ;
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC') ;
+@import url('https://fonts.googleapis.com/css?family=Merienda');
 
 * {
-font-family: "Abel", "sans-serif";
+font-family : 'Merienda', 'cursive';
+}
+a{
+    color: inherit;
+    text-decoration: none;
 }
 
 a:link, a:visited {
-    background-color: #3d728b;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+background-color : #8b6d60;
+color : white;
+padding : 14px 25px;
+text-align : center;
+text-decoration : none;
+display : inline-block;
 }
+
 a:hover, a:active {
-    background-color: #d4b8af;
+background-color : #7e7f80;
 }
 
-html,body{
-    height: 100%;
-    width: 100%;
-    margin: 0; 
-    font-size: 14px; 
-    color: white;
+html, body {
+height : 100%;
+width : 100%;
+margin : 0;
+font-size : 14px;
+color : white;
 }
 
-header{
-    background-image: url("../img/image.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size:cover; 
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
+header {
+font-family :'Great Vibes', 'cursive';
+background-image : url("../img/city.jpeg");
+background-repeat : no-repeat;
+background-position : center;
+background-size : cover;
+width : 100%;
+height : 100%;
+display : flex;
+flex-direction : column;
+justify-content : center;
+align-items : center;
 }
-
-/** Pour changer la photo de profil en haut 
-Il faut chercher le responsive **/ 
 
 header img {
-    width: 250px;
-    height: 300px;
+width : 250px;
+height : 300px;
+}
 
-} 
-
-
-header h1{
-    color: #3d728b;
-    font-size: 24px;
-    margin: 0%;
-    text-align:center;
-    text-decoration: overline white;
-    letter-spacing: 5px;
-    background: rgba(187, 229, 229, 0.4);
-    padding: 10px 10px;
-    cursor:pointer;
-    transition: all 0.3s cubic-bezier(.48,1.48,1,.46);
-    animation: example 2s ease-in-out;
-    animation-name:example;
+header h1 {
+color : white;
+font-family :'Great Vibes', 'cursive';
+font-size : 50px;
+margin : 0%;
+text-align : center;
+letter-spacing : 5px;
+padding : 10px 10px;
+cursor : pointer;
+transition : all 0.3s cubic-bezier(0.48,1.48,1,0.46);
+animation : example 2s ease-in-out;
+animation-name : example;
 }
 
 @keyframes example {
-    from {
-        opacity:0;
-        transform: translateY(100px);
-    }
-    to {
-        opacity:1;;
-        transform: translateY(0);
-    }
+from {
+opacity : 0;
+transform : translateY(100px);
+}
+to {
+opacity : 1;
+transform : translateY(0);
+}
 }
 
-/** h2{
-    color: white;
-    font-size: 24px;
-    margin: 0%;
-    text-align:center;
-    text-decoration: overline white;
-    letter-spacing: 5px;
-    background: rgba(249, 205, 114, 0.6);
-    padding: 10px 10px;
-} **/
-
-h2:hover{
-    color: black;
+h2:hover {
+color : black;
 }
-
-/** SECTION **/ 
 
 section {
-    background-image: url("../img/gris_clair.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size:cover; 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    justify-content: center;
-    min-height: 100%;
-    align-items: center;
-} 
-
-/** ARTICLE **/
+background-image : url("../img/fond.jpeg");
+background-repeat : no-repeat;
+background-position : center;
+background-size : cover;
+display : flex;
+flex-wrap : wrap;
+flex-direction : row;
+justify-content : center;
+min-height : 100%;
+align-items : center;
+}
 
 article {
-    background-image: url("../img/gris.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin: 10px;
-    padding: 120px,120px;
-    align-items: center;
-
+background-image : url("../img/fond.jpeg");
+background-repeat : no-repeat;
+background-position : center;
+background-size : cover;
+display : flex;
+flex-direction : column;
+width : 30%;
+margin : 10px;
+align-items : center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width:600px) {
     section {
-        flex-wrap: nowrap;
-        flex-direction: column;
-    }
-    article {
-       width: 80%;
-    }
+flex-wrap : nowrap;
+flex-direction : column;
+            }
 }
 
-#photo_profil {
-    align-items: center; 
-    margin: 10%;
-}
+article {
+width : 80%;
 
-#photo_header {
-background-repeat: no-repeat;
-background-position: center;
-background-size:cover; 
-display: flex;
-flex-wrap: wrap;
-flex-direction:row;
-justify-content: center;
-min-height: 50%;
-max-height: 50%;
-max-width: 90%;
-align-items: center;
-}
-
-#logo_linkedin {
-    height: 50px;
-    width: 150px;
-}
-
-.accueil {
-    width: 94.9%;
-    padding:0%;
-    margin: 0%;
 }
 
 .lesarticles, a {
-    background-color: peru;
-    background-image: none;
-    flex-wrap: wrap;
-    flex-direction:row;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-} 
+    background-color : peru;
+    background-image : none;
+    flex-wrap : wrap;
+    flex-direction : row;
+    align-items : center;
+    display : flex;
+    justify-content : row ;
+    }
+    
+.accueil {
+        height: 2%;
+        width: 100%;
+    }
 
-footer {
-    color: white;
-    text-align:center;
-    background-color: #3d728b;
+#photo_profil {
+align-items : center;
+margin : 10%;
 }
+
+/** PAGE A CONTACT **/ 
+
+
+/** PAGE A PROPOS **/ 
+.accueil {
+    width : 30%;
+    margin: 10%;
+    }
+
+#photo_header {
+    height: 300px;
+    width: 180px;
+}
+/** FIN - PAGE A PROPOS **/ 
+
+
+/** PAGE INDEX **/ 
+
+/** POUR DECOUPER EN DEUX LA PAGE
+
+#entier{
+    width: 600px;
+    border:solid black 1px;
+}
+
+#section1 {
+    height: 500px;
+    width: 300px;
+    float: left;
+    border: solid black 1px;
+}
+
+#section2 {
+    height: 500px;
+    width: 300px;
+    float: right;
+    margin-left: 300px;
+    border: solid black 1px;
+} **/
 
 .moncv {
-    width:150px;
+    width : 150px;
+    }
+
+#presentation {
+    background-image: url("../img/gris_clair.jpg") ;
+    color: white;
+    height: 200px;
+    width: 200px;
+    text-align: center;
 }
 
-/** LES ARTICLES **/
+/** #photo_presentation {
+    
+} **/
 
 #article-1 {
-    background-image: url("../img/experience.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
-}
-#article-2 {
-    background-image: url("../img/diplomes.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
+background-image : url("../img/experience.jpg");
+color : #3d728b;
+height : 300px;
+width : 300px;
 }
 
 #article-3 {
-    background-image: url("../img/hobbies.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
+background-image : url("../img/hobbies.jpg");
+color : #3d728b;
+height : 300px;
+width : 300px;
 }
 
 #article-4 {
-    background-image: url("../img/competences.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
+background-image : url("../img/competences.jpg");
+color : #3d728b;
+height : 300px;
+width : 300px;
 }
 
 #article-5 {
-    background-image: url("../img/voyages.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
+background-image : url("../img/voyages.jpg");
+color : #3d728b;
+height : 300px;
+width : 300px;
 }
 
 #article-6 {
-    background-image: url("../img/contact.jpg");
-    color: #3d728b;
-    height: 300px;
-    width: 300px;
+background-image : url("../img/contact.jpg");
+color : #3d728b;
+height : 300px;
+width : 300px;
 }
 
+/** FIN INDEX **/ 
 
 
+/** FOOTER **/ 
+
+#logo_linkedin {
+    height: 50px;
+    width: 120px;
+}
+
+footer {
+    text-align : center;
+    align-items: center;
+    background-color : #8b6d60;
+    display: flex;
+    flex-direction: column;
+    }
+
+.social {
+    height: 200px;
+    width: 200px;
+}
+/** FIN FOOTER **/ 
